[package]
name = "tun-playground"
version = "0.1.0"
edition = "2021"
[[bin]]
name = "tunquic"
path = "src/main.rs"
[dependencies]
tun = {version = "0.7",features = ["async"]}

clap = { version = "4.5.9", features = ["derive"]}
inquire = "0.7.5"
tokio = { version = "1", features = ["full"] }

serde = "1.0"
serde_derive = "1.0.190"
bincode = "1.3"
log = "0.4.22"