[package]
name = "tun-playground"
version = "0.1.0"
edition = "2021"
[[bin]]
name = "tunquic"
path = "src/main.rs"
[[bin]]
name = "client"
path = "src/client/main.rs"
[[bin]]
name = "server"
path = "src/server/main.rs"
[dependencies]
tun = {version = "0.7.10",features = ["async"]}

clap = { version = "4.5.9", features = ["derive"]}
tokio = { version = "1", features = ["full","io-util"] }
tokio-util = "0.7.13"
tokio-stream = "0.1.17"

serde = "1.0"
serde_derive = "1.0.190"
bincode = "1.3"
log = "0.4.22"

quinn = "0.11"
rustls = { version = "0.23.20",default-features = false,features = ["logging","std",] }
rcgen = "0.13.2"
async-trait = "0.1.84"
futures = "0.3.31"

bollard = "0.18.1"

ulid = "1.1.4"

tappers = { version = "0.4.2", features = ["tapwin6","wintun","tokio"] }