[package]
name = "client"
version = "0.1.0"
edition = "2021"
[[bin]]
name = "client"
path = "src/main.rs"
[dependencies]
tun = {version = "0.7.10",features = ["async"]}

common = { path = "../common" }
tokio = { version = "1", features = ["full","io-util"] }
tokio-util = {version = "0.7.13", features = ["io-util"]}
tokio-stream = "0.1.17"
packet = { version = "0.1.4" }
async-trait = "0.1.84"
futures = "0.3.31"

quinn = "0.11"
rustls = { version = "0.23.20",default-features = false,features = ["logging","std",] }